# fasttts

./: .gitignore  README.md  fasttts.html  fasttts.py  pyproject.toml  server.py
assets/: zh_leijiayin.txt
tts/: __init__.py  _kokoro.py  _megatts3.py  _minimax.py  api.py  base.py  mock.py
utils/: audio_utils.py  logg.py  models.py  playback.py  stream_utils.py  task_queue.py
