[project]
name = "fasttts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cn2an>=0.5.23",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "huggingface_hub",
    "jieba>=0.42.1",
    "kokoro>=0.9.4",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy>=2.2.5",
    "ordered-set>=4.1.0",
    "pypinyin-dict>=0.9.0",
    "pypinyin>=0.54.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "spaces>=0.35.0",
    "spacy>=3.8.4",
    "torch",
    "transformers",
    "uvicorn>=0.34.2",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
